<resources>
    <string name="app_name">SwapApp</string>
    <string name="button_sign_in">Sign In</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Swap App</string>
    <string name="image_descript">Pequeño avion de papel como logo temporal de app</string>
    <string name="text_signup">¿No tienes una cuenta?</string>
    <string name="newAccount"><u>Create  una  aqui</u></string>
    <string name="Prueba">Prueba</string>
    <string name="item_friends">Friends</string>
    <string name="item_gather">Gather</string>
    <string name="item_lesson">Lesson</string>
    <string name="txt_welcome">Welcome  !</string>
    <string name="txt_UserName">Name</string>
    <string name="txtCountry">Country , Place</string>
    <string name="txtAge">Age</string>
    <string name="Toolbar">|  SwapApp</string>
    <string name="imgDescription">Foto del Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtGender">Gender</string>
    <string name="txtPhone">Phone</string>
    <string name="txtDescriptoin">Description</string>
    <string name="txtToTeach">I want to Teach</string>
    <string name="txtToLearn">I want to Learn</string>
    <string name="txt_send">send request</string>
    <string name="txt_task">Task</string>
    <string name="txt_Status">Status</string>
    <string name="txt_namePerson">Name of the other person</string>
    <string name="txt_Time">Day Date  , Month</string>
    <string name="txt_map">Country , Place (Latitude - Longitude)</string>
</resources>
