<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fdg_img_person"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/imgDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_name"
            app:srcCompat="@drawable/ic_default" />

        <TextView
            android:id="@+id/fgd_txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txt_UserName"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fgd_icon_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/txtCountry"
            app:layout_constraintStart_toEndOf="@+id/fdg_img_person"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_name"
            app:srcCompat="@drawable/ic_place" />

        <ImageView
            android:id="@+id/fdg_icon_gender"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txtGender"
            app:layout_constraintStart_toEndOf="@+id/fdg_img_person"
            app:layout_constraintTop_toBottomOf="@+id/fdg_icon_age"
            app:srcCompat="@drawable/ic_gender" />

        <ImageView
            android:id="@+id/fdg_icon_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txtAge"
            app:layout_constraintStart_toEndOf="@+id/fdg_img_person"
            app:layout_constraintTop_toBottomOf="@+id/fgd_icon_place"
            app:srcCompat="@drawable/ic_cake" />

        <ImageView
            android:id="@+id/fdg_icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txtPhone"
            app:layout_constraintStart_toEndOf="@+id/fdg_img_person"
            app:layout_constraintTop_toBottomOf="@+id/fdg_icon_gender"
            app:srcCompat="@drawable/ic_call" />

        <TextView
            android:id="@+id/fgd_txt_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fgd_icon_place"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_name" />

        <TextView
            android:id="@+id/fgd_txt_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fdg_icon_age"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_country" />

        <TextView
            android:id="@+id/fgd_txt_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fdg_icon_gender"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_age" />

        <TextView
            android:id="@+id/fgd_txt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fdg_icon_phone"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_gender" />

        <TextView
            android:id="@+id/fgd_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtDescriptoin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_phone" />

        <TextView
            android:id="@+id/fgd_txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtDescriptoin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_description" />

        <TextView
            android:id="@+id/fgd_teach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtToTeach"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_description" />

        <TextView
            android:id="@+id/fgd_txt_teach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtToTeach"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_teach" />

        <TextView
            android:id="@+id/fgd_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtToLearn"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_txt_teach" />

        <TextView
            android:id="@+id/fgd_txt_learn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtToLearn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fgd_learn" />

        <Button
            android:id="@+id/fdg_btn_request"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/desing_send"
            android:text="@string/txt_send"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>