<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crd_user_gather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pgl_img_person"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/imgDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[11]" />

        <ImageView
            android:id="@+id/pgl_icon_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/pgl_img_person"
            app:layout_constraintTop_toBottomOf="@+id/pgl_txt_name"
            app:srcCompat="@drawable/ic_place" />

        <ImageView
            android:id="@+id/pgl_icon_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/pgl_img_person"
            app:layout_constraintTop_toBottomOf="@+id/pgl_txt_country"
            app:srcCompat="@drawable/ic_cake" />

        <TextView
            android:id="@+id/pgl_txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_UserName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pgl_img_person"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pgl_txt_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pgl_icon_place"
            app:layout_constraintTop_toBottomOf="@+id/pgl_txt_name" />

        <TextView
            android:id="@+id/pgl_txt_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pgl_icon_age"
            app:layout_constraintTop_toBottomOf="@+id/pgl_txt_country" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>