<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pll_stack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txt_task"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pll_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pll_icon_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pll_stack"
            app:srcCompat="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/pll_icon_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pll_icon_person"
            app:srcCompat="@drawable/ic_schedule" />

        <ImageView
            android:id="@+id/pll_icon_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pll_icon_time"
            app:srcCompat="@drawable/ic_place" />

        <TextView
            android:id="@+id/pll_txt_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_namePerson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pll_icon_person"
            app:layout_constraintTop_toBottomOf="@+id/pll_stack" />

        <TextView
            android:id="@+id/pll_txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pll_icon_time"
            app:layout_constraintTop_toBottomOf="@+id/pll_txt_person" />

        <TextView
            android:id="@+id/pll_txt_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/txt_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pll_icon_place"
            app:layout_constraintTop_toBottomOf="@+id/pll_txt_time" />

        <ImageView
            android:id="@+id/pll_icon_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/txt_Status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/status_wait" />

        <TextView
            android:id="@+id/pll_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_Status"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/pll_icon_status"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>